<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Впрок: фотограф</string>
    <string name="vprok">ВПРОК</string>
    <string name="vprok_photo">Фотографирование товаров</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="api">API URL</string>
    <string name="save">Сохранить</string>
    <string name="enter">Войти</string>
    <string name="connection_setting">Настройки соединения</string>
    <string name="identify_product">ОПРЕДЕЛИТЬ ТОВАР</string>
    <string name="auto_detect_code">Автоматически</string>
    <string name="manual_enter_code">Ввести код вручную</string>
    <string name="product_detect_success">ТОВАР ОПРЕДЕЛЕН</string>
    <string name="product_name">Наименование:</string>
    <string name="product_code">Код:</string>
    <string name="product_photo_count">Количество фотографий:</string>
    <string name="start_photo_product">Начать фотографирование</string>
    <string name="filming">СЪЕМКА</string>
    <string name="complite_photo">Готовые фото:</string>
    <string name="make_photo">Сделать фото</string>
    <string name="save_on_server">Сохранить на сервере</string>
    <string name="back">Назад</string>
    <string name="send_data">ПЕРЕДАЧА ДАННЫХ</string>
    <string name="success">Успешно!</string>
    <string name="next_product">Следующий товар</string>
    <string name="cancel_filming">ОТМЕНА СЪЕМКИ</string>
    <string name="complite_photo_count_text">Вы уже сделали %1$s фото</string>
    <string name="cancel_question">Вы уверены, что хотите вернуться к форме товара?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="error_crash">Обнаружена ошибка! Пожалуйста отправьте ее разработчику&#8230;</string>

</resources>