<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/product_detect_success"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/productNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/productCodeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_code" />

    <TextView
        android:id="@+id/productPhotoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/product_photo_count" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/nextProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_product"
        android:visibility="gone" />

    <Button
        android:id="@+id/startPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_photo_product" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>