<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/filming"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/complitePhotoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/complite_photo" />

    <ListView
        android:id="@+id/productPhotoListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/makePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_photo" />

    <Button
        android:id="@+id/saveOnServerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_on_server" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>