<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/identify_product"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/autoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_detect_code" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4" />

    <Button
        android:id="@+id/manualButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_enter_code" />

    <EditText
        android:id="@+id/manualProductCodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>